--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1>Saron Raut</h1>
 
-<img src="/Users/saronraut/Downloads/IMG_0035.JPG" alt="Saron Raut">
+<img src=""images/IMG_0035.JPG" alt="Saron Raut" width="150" height="300">>
 
 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
   It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, 
